# ghostty-blackhole-main

./: .gitignore  README.md  _gen.ps1  _new_middle.txt  _patch.py  _w.ps1  _w1.ps1  blackhole_debug.txt  blackhole_lists.txt  blackhole_presets.txt  debug_log.md  debug_state.md
Blakhole_UI/: CMakeLists.txt  Main.qml  app.rc  main.cpp
Blakhole_UI/core/: blackholecore.cpp  blackholecore.h
Blakhole_UI/pages/: AdvancedConfig.qml  BlackholeConfig.qml
Doc/: ARCHITECTURE.md  BUILD_PACKAGE.md  debug_log.md  功能完成度清单.md
release/: blackhole_advanced.txt  blackhole_debug.txt  blackhole_idlelist.txt  blackhole_presets.txt
src/: main.cpp  win32_gl.cpp
